--- a/src/views/random.html
+++ b/src/views/random.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
 
-  <title>Jared Makes - About</title>
+  <title>Jared Makes - Random</title>
 </head>
 
 <body>
@@ -26,6 +26,76 @@
       </li>
     </ul>
   </nav>
+      <header class="header header__pages">
+        <h1 class="header__pages__title">Random</h1>
+      </header>
+      <section class="section section__pages">
+        <div class="portfolio__entry">
+          <h2 class="portfolio__entry__title">Git Hub</h2>
+          <img src="../images/Octocat.png" alt="octocat from github" class="portfolio__entry__image big-image">
+I've had a bunch of new projects popping up recently. Many are in development or are just demos that aren't on display
+to the public. However, you can visit my <a rel="noreferrer noopener" href="https://www.github.com/trujared"
+  target="_blank">GitHub</a> to see all my current work.
+          </p>
+        </div>
+        <div class="portfolio__entry">
+          <h2 class="portfolio__entry__title">Assorted Gutter Themes</h2>
+          <img src="../images/gutter.png" alt="screenshot of gutter themes"
+            class="portfolio__entry__image big-image">
+          <p class="portfolio__entry__description">
+Nothing major here, but since <a rel="noreferrer noopener"
+    href="https://packagecontrol.io/packages/Assorted%20Gutter%20Themes" target="_blank">Assorted Gutter Themes</a> is a
+  package for <a rel="noreferrer noopener" href="https://www.sublimetext.com/" target="_blank">Sublime Text</a> I
+  decided to keep it here. As of this posting, it's had nearly 500 downloads, not too shabby for gutter-eye-candy.
+          </p>
+        </div>
+        <div class="portfolio__entry">
+          <h2>CodePens</h2>
+
+          <p><br>Below you can view some of my Pens from CodePen, or go to to my <a
+              href="https://codepen.io/JaredsPens/#" target="_blank" rel="noopener">showcase</a> page.</p>
+          <p>
+            <h3>Pure CSS Pac-Man</h3>
+            <h4>Click on Pac-Man's head to freak the ghosts out</h4>
+            <p data-height="541" data-theme-id="0" data-slug-hash="aYjONx" data-default-tab="result" data-user="JaredsPens"
+              data-pen-title="pac-man" class="codepen">See the Pen <a href="https://codepen.io/JaredsPens/pen/aYjONx/">pac-man</a>
+              by Jared (<a href="https://codepen.io/JaredsPens">@JaredsPens</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+            <script async="" src="https://static.codepen.io/assets/embed/ei.js"></script>
+          </p>
+          <br>
+          <p>
+            <h3>Pure CSS/JS 8-Ball</h3>
+            <p data-height="614" data-theme-id="0" data-slug-hash="pLqqaY" data-default-tab="result" data-user="JaredsPens"
+              data-pen-title="magic8ball" class="codepen">See the Pen <a
+                href="https://codepen.io/JaredsPens/pen/pLqqaY/">magic8ball</a> by Jared (<a
+                href="https://codepen.io/JaredsPens">@JaredsPens</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+            <script async="" src="https://static.codepen.io/assets/embed/ei.js"></script>
+          </p>
+          <br>
+          <p>
+            <h3>Really Nice Shirt</h3>
+            <h4>My version of one of the exercises from <a href="https://courses.kevinpowell.co/courses/master-sass"
+                target="_blank">"Sass - from beginner to real world"</a>.</h4></p>
+            <p class="codepen" data-height="609" data-theme-id="0" data-default-tab="result" data-user="JaredsPens"
+              data-slug-hash="JxNKNN"
+              style="height: 609px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;"
+              data-pen-title="really-nice-shirt">
+              <span>See the Pen <a href="https://codepen.io/JaredsPens/pen/JxNKNN/">
+                  really-nice-shirt</a> by Jared (<a href="https://codepen.io/JaredsPens">@JaredsPens</a>)
+                on <a href="https://codepen.io">CodePen</a>.</span>
+            </p>
+            <script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+            <br>
+            <p>
+              <h3>Easter Bunny Zombie</h3>
+              <p data-height="680" data-theme-id="0" data-slug-hash="YaLjqL" data-default-tab="result" data-user="JaredsPens"
+                data-pen-title="bunnyCard" class="codepen">See the Pen <a
+                  href="https://codepen.io/JaredsPens/pen/YaLjqL/">bunnyCard</a> by Jared (<a
+                  href="https://codepen.io/JaredsPens">@JaredsPens</a>) on <a href="https://codepen.io">CodePen</a>.</p>
+              <script async="" src="https://static.codepen.io/assets/embed/ei.js"></script>
+            </p>
+        </div>
+      </section>
   <footer class="footer">
     <p>
       Created By
