--- a/src/views/web.html
+++ b/src/views/web.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
 
-  <title>Jared Makes - About</title>
+  <title>Jared Makes - Web</title>
 </head>
 
 <body>
@@ -26,6 +26,49 @@
       </li>
     </ul>
   </nav>
+    <header class="header header__pages">
+      <h1 class="header__pages__title">Web</h1>
+    </header>
+    <p class="info-text" style="padding:0 25px 25px; text-align: center;">* I spent the last half of 2018 mostly working in Voice, expect to see some cool things on this page in 2019!</p>
+    <section class="section section__pages">
+      <div class="portfolio__entry">
+        <h2 class="portfolio__entry__title">Aud & Emm</h2>
+        <img src="../images/pnkPrpWll.png" alt="pink and purple abastract image" class="portfolio__entry__image big-image">
+        <p class="portfolio__entry__description"><a href="https://www.audandemm.xyz/" target="_blank">Aud & Emm</a> was a fun take on a Sass refresher. It’s just a simple static one pager, but I challenged myself to really dig
+        deep with Sass and, well frankly, over-engineer the crap out of it. Sure, it was overkill, but the goal was to learn how
+        to use Sass for upcoming bigger projects. You can check out my code over at <a href="https://github.com/trujared/AnE" target="_blank">GitHub</a>.
+        </p>
+      </div>
+      <div class="portfolio__entry">
+        <h2 class="portfolio__entry__title">Omni-Food</h2>
+<img src="../images/omnifood.png" alt="screenshot of the omni-food website" class="portfolio__entry__image big-image">
+        <p class="portfolio__entry__description">
+          <a href="http://omnifuddemo.info">Omni-Food</a> is just a quick refresher I did to get myself back into the swing of
+          things with front end web development after taking a break for almost a year to work with <a
+            href="https://jaredmakes.website/voice/" target="_blank" rel="noreferrer noopener"
+            aria-label="voice applications (opens in a new tab)">voice applications</a>. I'm pretty happy with the results;
+          especially the color scheme. Not too much JavaScript in this one. Built with vanilla HTML and CSS, but I did use CSS
+          variables for this, which was cool -- still, it's no replacement for SASS
+        </p>
+      </div>
+      <div class="portfolio__entry">
+        <h2 class="portfolio__entry__title">Tiger-Hunt</h2>
+        <img src="../images/tigerHunt.png" alt="screenshot of the tiger-hunt website" class="portfolio__entry__image big-image">
+        <p class="portfolio__entry__description"><a href="https://gunstockwood.com" target="_blank" rel="noopener">Tiger-hunt</a> was a full overhaul of a site that
+          had not been updated since the early 2000's. I had to make considerations for the clients specific user base
+          (non-technical individuals, generally past mid-life, who are not used to working with computers). Additionally, the
+          client had a very specific vision for the site. I was able to overhaul the entire site and meet and exceed the client
+          expectations. They have been quite pleased with the results from their store as well. Site built using WordPress and I
+          used <a href="https://ecwid.com" target="_blank" rel="noopener">Ecwid</a> to host the store. And no, it's not about
+          hunting tigers... <a href="https://en.wikipedia.org/wiki/Flame_maple" target="_blank" rel="noopener">curly maple</a>
+          is a type of wood, also known as tiger maple. The client makes antique rifle stocks, walking sticks, and native
+          american war club replicas, using curly maple.<br>Here is a sample of the previous site:
+          <br>
+          <br>
+          <img src="../images/oldsite2.png" alt="an old picture of tiger-hunt's website" class="portfolio__entry__image big-image" >
+        </p>
+      </div>
+    </section>
   <footer class="footer">
     <p>
       Created By
