--- a/src/views/about.html
+++ b/src/views/about.html
@@ -29,6 +29,23 @@
         </li>
       </ul>
     </nav>
+          <header class="header header__pages about-page">
+            <h1 class="header__pages__title">Jared Is</h1>
+          </header>
+          <div class="portfolio__entry">
+            <h4 class="about-page__quote">"There is nothing noble in being superior to your fellow man; true nobility is being superior to your former self." --
+            Ernest Hemingway</h4>
+            <img src="../images/deerJared.jpg" alt="parody picture of Jared"
+              class="portfolio__entry__image big-image about-page__image">
+            <p class="portfolio__entry__description about-page__description">
+              Over 20 years ago I starting working part-time at a local bookstore. That path careened me in and out of many awesome
+              (and a couple of not-so-awesome) retail jobs. I've been fortunate enough to work with some really great people along the
+              way.</p>  <p>Although I have had a very successful career as a General Manager for several different companies, 20 years in the
+                same industry has grown a little stale. I find that I'm no longer challenged and that I've come to far outgrow this
+                field. I need something that will challenge me daily and will force me to constantly learn and develop myself. I've
+                always enjoyed all things related to technology and have decided that I would love to spend the back half of my career
+                working in web development/software engineering.</p>
+          </div>
     <footer class="footer">
       <p>
         Created By
