--- a/src/views/random.html
+++ b/src/views/random.html
@@ -33,6 +33,7 @@
         <div class="portfolio__entry">
           <h2 class="portfolio__entry__title">Git Hub</h2>
           <img src="../images/Octocat.png" alt="octocat from github" class="portfolio__entry__image big-image">
+          <p class="portfolio__entry__description">
 I've had a bunch of new projects popping up recently. Many are in development or are just demos that aren't on display
 to the public. However, you can visit my <a rel="noreferrer noopener" href="https://www.github.com/trujared"
   target="_blank">GitHub</a> to see all my current work.
