--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -53,7 +53,9 @@
       rgba(color(primary), 0.9),
       rgba(color(primary), 0.9)
     ),
-    url($url) fixed center/cover;
+    url($url);
+  background-size: cover;
+  background-position: center, center;
 }
 
 @mixin grid-span($number, $direction: row) {
