--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -1,59 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="icon" sizes="16x16 32x32 64x64" href="../images/favicon.ico" />
+    <link rel="stylesheet" href="../styles/main.scss" />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+      integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+      crossorigin="anonymous"
+    />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="icon" sizes="16x16 32x32 64x64" href="../images/favicon.ico" />
-  <link rel="stylesheet" href="../styles/main.scss" />
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous" />
+    <title>Jared Makes - Contact</title>
+  </head>
+  <body>
+    <nav class="nav">
+      <a href="./index.html" class="nav__logo">Jared Makes</a>
+      <ul class="nav__list">
+        <li class="nav__list__item"><a href="./web.html">Web</a></li>
+        <li class="nav__list__item"><a href="./voice.html">Voice</a></li>
+        <li class="nav__list__item"><a href="./random.html">Random</a></li>
+        <li class="nav__list__item">
+          <a href="./contact.html" class="current-page">Contact</a>
+        </li>
+        <li class="nav__list__item">
+          <a href="./about.html">About</a>
+        </li>
+      </ul>
+    </nav>
+    <header class="header header__pages">
+      <h1 class="header__pages__title">Contact</h1>
+    </header>
+    <section class="section section__pages">
+      <div class="portfolio__entry" style="text-align: center">
+              <!-- ! remove inline sytling on this page -->
 
-  <title>Jared Makes - About</title>
-</head>
-
-<body>
-  <nav class="nav">
-    <a href="./index.html" class="nav__logo">Jared Makes</a>
-    <ul class="nav__list">
-      <li class="nav__list__item"><a href="./web.html">Web</a></li>
-      <li class="nav__list__item"><a href="./voice.html">Voice</a></li>
-      <li class="nav__list__item"><a href="./random.html">Random</a></li>
-      <li class="nav__list__item"><a href="./contact.html" class="current-page">Contact</a></li>
-      <li class="nav__list__item">
-        <a href="./about.html">About</a>
-      </li>
-    </ul>
-  </nav>
-  <footer class="footer">
+        <p class="portfolio__entry__description">
+          This page is still progressing. Currently you can contact me at <a href="mailto:jared@jaredmakes.com">jared@jaredmakes.com</a>.
+        </p>
+      </div>
+    <!-- <footer class="footer">
     <p>
       Created By
       <a href="#">Jared Truscott</a> &copy;
       <script>
         document.write(new Date().getFullYear());
-      </script>
-      <ul class="footer__social-links">
-        <li>
-          <a href="http://github.com/trujared" target="_blank" rel="noopener noreferrer"><i
-              class="fab fa-github-alt"></i></a>
-        </li>
-        <li>
-          <a href="http://codepen.io/jaredspens" target="_blank" rel="noopener noreferrer"><i
-              class="fab fa-codepen"></i></a>
-        </li>
-        <li>
-          <a href="http://twitter.com/trujared" target="_blank" rel="noopener noreferrer"><i
-              class="fab fa-twitter-square"></i></a>
-        </li>
-        <li>
-          <a href="http://instagram.com/trujared" target="_blank" rel="noopener noreferrer"><i
-              class="fab fa-instagram"></i></a>
-        </li>
-      </ul>
-    </p>
-  </footer>
-  <script src="../javascripts/index.js"></script>
-</body>
+      </script> -->
+      <!-- ! remove this div -->
+      <!-- ! remove inline sytling on this page -->
 
+      <div class="flex-wrap" style="display:flex; place-content: center; place-items: center">
+    <ul class="footer__social-links" style="display: flex; place-content: space-around; place-items: center; width: 250px; ">
+      <li>
+        <a
+          href="http://github.com/trujared"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-github-alt"></i
+        ></a>
+      </li>
+      <li>
+        <a
+          href="http://codepen.io/jaredspens"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-codepen"></i
+        ></a>
+      </li>
+      <li>
+        <a
+          href="http://twitter.com/trujared"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-twitter-square"></i
+        ></a>
+      </li>
+      <li>
+        <a
+          href="http://instagram.com/trujared"
+          target="_blank"
+          rel="noopener noreferrer"
+          ><i class="fab fa-instagram"></i
+        ></a>
+      </li>
+    </ul>
+    </div>
+    <!-- </p>
+  </footer> -->
+    <script src="../javascripts/index.js"></script>
+  </body>
 </html>
