--- a/src/views/index.html
+++ b/src/views/index.html
@@ -135,9 +135,9 @@
   </body>
 </html>
 
-<!-- todo make contactt page form-->
-<!-- todo style current page anchor class-->
+
 <!-- todo nav change color on scroll -->
 <!-- todo create cool mobile nav -->
 <!-- todo add seo stuff to head -->
-<!-- todo add cool link animation -->
+<!-- todo finish contact page (see netlify forms) -->
+<!-- todo add cool link animation on voice page-->
