--- a/src/views/about.html
+++ b/src/views/about.html
@@ -73,6 +73,6 @@
         </ul>
       </p>
     </footer>
-    <script src="../javascripts/index.js"></script>
+    <script src="../javascripts/app.js"></script>
   </body>
 </html>
