--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -35,12 +35,14 @@
     </header>
     <section class="section section__pages">
       <div class="portfolio__entry" style="text-align: center">
-              <!-- ! remove inline sytling on this page -->
+        <!-- ! remove inline sytling on this page -->
 
         <p class="portfolio__entry__description">
-          This page is still progressing. Currently you can contact me at <a href="mailto:jared@jaredmakes.com">jared@jaredmakes.com</a>.
+          This page is still progressing. Currently you can contact me at
+          <a href="mailto:jared@jaredmakes.com">jared@jaredmakes.com</a>.
         </p>
       </div>
+    </section>
     <!-- <footer class="footer">
     <p>
       Created By
@@ -48,47 +50,53 @@
       <script>
         document.write(new Date().getFullYear());
       </script> -->
-      <!-- ! remove this div -->
-      <!-- ! remove inline sytling on this page -->
+    <!-- ! remove this div -->
+    <!-- ! remove inline sytling on this page -->
 
-      <div class="flex-wrap" style="display:flex; place-content: center; place-items: center">
-    <ul class="footer__social-links" style="display: flex; place-content: space-around; place-items: center; width: 250px; ">
-      <li>
-        <a
-          href="http://github.com/trujared"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-github-alt"></i
-        ></a>
-      </li>
-      <li>
-        <a
-          href="http://codepen.io/jaredspens"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-codepen"></i
-        ></a>
-      </li>
-      <li>
-        <a
-          href="http://twitter.com/trujared"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-twitter-square"></i
-        ></a>
-      </li>
-      <li>
-        <a
-          href="http://instagram.com/trujared"
-          target="_blank"
-          rel="noopener noreferrer"
-          ><i class="fab fa-instagram"></i
-        ></a>
-      </li>
-    </ul>
+    <div
+      class="flex-wrap"
+      style="display:flex; place-content: center; place-items: center"
+    >
+      <ul
+        class="footer__social-links"
+        style="display: flex; place-content: space-around; place-items: center; width: 250px; "
+      >
+        <li>
+          <a
+            href="http://github.com/trujared"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-github-alt"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://codepen.io/jaredspens"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-codepen"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://twitter.com/trujared"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-twitter-square"></i
+          ></a>
+        </li>
+        <li>
+          <a
+            href="http://instagram.com/trujared"
+            target="_blank"
+            rel="noopener noreferrer"
+            ><i class="fab fa-instagram"></i
+          ></a>
+        </li>
+      </ul>
     </div>
     <!-- </p>
   </footer> -->
-    <script src="../javascripts/index.js"></script>
+    <script src="../javascripts/app.js"></script>
   </body>
 </html>
