--- a/src/views/random.html
+++ b/src/views/random.html
@@ -124,7 +124,7 @@ Nothing major here, but since <a rel="noreferrer noopener"
       </ul>
     </p>
   </footer>
-  <script src="../javascripts/index.js"></script>
+  <script src="../javascripts/app.js"></script>
 </body>
 
 </html>
