--- a/src/views/web.html
+++ b/src/views/web.html
@@ -96,6 +96,6 @@
       </ul>
     </p>
   </footer>
-  <script src="../javascripts/index.js"></script>
+  <script src="../javascripts/app.js"></script>
 </body>
 </html>
