--- a/src/views/index.html
+++ b/src/views/index.html
@@ -131,7 +131,7 @@
             </ul>
           </p>
         </footer>
-    <script src="../javascripts/index.js"></script>
+    <script src="../javascripts/app.js"></script>
   </body>
 </html>
 
