--- a/src/views/voice.html
+++ b/src/views/voice.html
@@ -121,7 +121,7 @@
       </ul>
     </p>
   </footer>
-  <script src="../javascripts/index.js"></script>
+  <script src="../javascripts/app.js"></script>
 </body>
 
 </html>
