added mobile nav

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -22,6 +22,19 @@
         <li class="nav__list__item"><a href="./about.html">About</a></li>
       </ul>
     </nav>
+    <!-- mobile nav -->
+    <div class="mobile-nav__toggler"><i class="fas fa-bars mobile-nav__toggler--icon"></i></div>
+    <nav class="mobile-nav">
+        <a href="./index.html"><img src="../images/tiger.png" alt="jared makes tiger logo" class="mobile-nav__image"></a>
+      <ul class="nav__list mobile-nav__list">
+        <li class="nav__list__item mobile-nav__list__item"><a href="./web.html">Web</a></li>
+        <li class="nav__list__item mobile-nav__list__item"><a href="./voice.html">Voice</a></li>
+        <li class="nav__list__item mobile-nav__list__item"><a href="./random.html">Random</a></li>
+        <li class="nav__list__item mobile-nav__list__item"><a href="./contact.html">Contact</a></li>
+        <li class="nav__list__item mobile-nav__list__item"><a href="./about.html">About</a></li>
+      </ul>
+    </nav>
+
     <header class="header header__landing">
       <h1 class="header__landing__title">Jared Makes</h1>
       <div class="header__landing__sub">
@@ -136,8 +149,6 @@
 </html>
 
 
-<!-- todo nav change color on scroll -->
-<!-- todo create cool mobile nav -->
 <!-- todo add seo stuff to head -->
 <!-- todo finish contact page (see netlify forms) -->
 <!-- todo add cool link animation on voice page-->
