--- a/src/styles/components/_animations.scss
+++ b/src/styles/components/_animations.scss
@@ -15,43 +15,37 @@
 }
 
 // * keyframes * //
-@mixin glow($primaryColor, $secondaryColor, $accentColor: $white) {
-  @keyframes glow {
-    0%,
-    100% {
-      text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px $primaryColor,
-        0 0 10px $primaryColor, 0 0 20px $primaryColor, 0 0 20px $primaryColor,
-        0 0 15px $primaryColor;
-    }
-    20%,
-    80% {
-      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 15px $secondaryColor,
-        0 0 15px $secondaryColor, 0 0 25px $secondaryColor,
-        0 0 25px $secondaryColor, 0 0 20px $secondaryColor;
-    }
-    50%,
-    90% {
-      text-shadow: 0 0 20px #fff, 0 0 25px #fff, 0 0 35px $primaryColor,
-        0 0 55px $primaryColor, 0 0 65px $primaryColor, 0 0 15px $primaryColor,
-        0 0 20px $primaryColor;
-    }
-    30%,
-    70% {
-      text-shadow: 0 0 13px #fff, 0 0 16px #fff, 0 0 15px $accentColor,
-        0 0 15px $accentColor, 0 0 16px $accentColor, 0 0 30px $accentColor,
-        0 0 12px $accentColor;
-    }
+// ! define colors as needed ! //
+
+@keyframes glow {
+  0%,
+  100% {
+    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px purple, 0 0 10px purple,
+      0 0 20px purple, 0 0 20px purple, 0 0 15px purple;
+  }
+  20%,
+  80% {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 15px teal, 0 0 15px teal,
+      0 0 25px teal, 0 0 25px teal, 0 0 20px teal;
+  }
+  50%,
+  90% {
+    text-shadow: 0 0 20px #fff, 0 0 25px #fff, 0 0 35px purple, 0 0 55px purple,
+      0 0 65px purple, 0 0 15px purple, 0 0 20px purple;
+  }
+  30%,
+  70% {
+    text-shadow: 0 0 13px #fff, 0 0 16px #fff, 0 0 15px white, 0 0 15px white,
+      0 0 16px white, 0 0 30px white, 0 0 12px white;
   }
 }
 
-@mixin fade-in {
-  @keyframes fade-in {
-    from {
-      opacity: 0;
-      filter: blur(25px);
-    }
-    to {
-      opacity: 1;
-    }
+@keyframes fade-in {
+  from {
+    opacity: 0;
+    filter: blur(25px);
+  }
+  to {
+    opacity: 1;
   }
 }
