--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -2,14 +2,18 @@
   position: fixed;
   top: 0;
   height: 50px;
-  display: flex;
+  display: none;
   width: 100%;
   align-items: center;
   justify-content: space-around;
   background: color(primary);
   font-size: $base-font-size * 0.8;
-  transition: all 1s ease-in-out;
-  z-index: 999;
+  transition: background 1s ease-in-out;
+  z-index: 99;
+
+  @include mq(sm) {
+    display: flex;
+  }
 
   @include mq(xl) {
     padding: 0 $spacer * 2;
@@ -40,6 +44,69 @@
 
       &:hover,
       &:active {
+        color: color(accent);
+      }
+    }
+  }
+}
+
+.mobile-nav {
+  display: flex;
+  position: fixed;
+  flex-direction: column;
+  text-align: right;
+  place-content: flex-end;
+  font-size: 18px;
+  background: linear-gradient(
+    to left,
+    rgba(color(primary), 0.8),
+    80%,
+    transparent
+  );
+  height: 100vh;
+  width: 0;
+  margin: 0;
+  bottom: 0;
+  right: 0;
+  transition: all 1.5s cubic-bezier(0.22, 0.61, 0.36, 1);
+  overflow: hidden;
+  z-index: 99;
+
+  @include mq(sm) {
+    display: none;
+  }
+
+  &__toggler {
+    position: fixed;
+    display: block;
+    top: 0px;
+    left: 0px;
+    color: grey(2);
+    margin-left: 5px;
+    font-size: $base-font-size * 1.2;
+    z-index: 100;
+    &--icon {
+      transition: transform 1.4s cubic-bezier(0.22, 0.61, 0.36, 1);
+    }
+    @include mq(sm) {
+      display: none;
+    }
+  }
+
+  &__image {
+    width: 200px;
+    margin-left: 180px;
+    margin-top: 50px;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+
+    &__item {
+      padding-bottom: $spacer * 1.5;
+
+      & a {
         color: color(accent);
       }
     }
