--- a/src/views/random.html
+++ b/src/views/random.html
@@ -26,6 +26,19 @@
       </li>
     </ul>
   </nav>
+      <!-- mobile nav -->
+      <div class="mobile-nav__toggler"><i class="fas fa-bars mobile-nav__toggler--icon"></i></div>
+      <nav class="mobile-nav">
+        <a href="./index.html"><img src="../images/tiger.png" alt="jared makes tiger logo" class="mobile-nav__image"></a>
+        <ul class="nav__list mobile-nav__list">
+          <li class="nav__list__item mobile-nav__list__item"><a href="./web.html">Web</a></li>
+          <li class="nav__list__item mobile-nav__list__item"><a href="./voice.html">Voice</a></li>
+          <li class="nav__list__item mobile-nav__list__item"><a href="./random.html">Random</a></li>
+          <li class="nav__list__item mobile-nav__list__item"><a href="./contact.html">Contact</a></li>
+          <li class="nav__list__item mobile-nav__list__item"><a href="./about.html">About</a></li>
+        </ul>
+      </nav>
+
       <header class="header header__pages">
         <h1 class="header__pages__title">Random</h1>
       </header>
