minor adjustments to mobile nav

--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -35,13 +35,15 @@
       <i class="fas fa-bars mobile-nav__toggler--icon"></i>
     </div>
     <nav class="mobile-nav">
-      <a href="./index.html"
-        ><img
-          src="../images/tiger.png"
-          alt="jared makes tiger logo"
-          class="mobile-nav__image"
-      /></a>
+      <img
+        src="../images/tiger.png"
+        alt="jared makes tiger logo"
+        class="mobile-nav__image"
+      />
       <ul class="nav__list mobile-nav__list">
+        <li class="nav__list__item mobile-nav__list__item">
+          <a href="./index.html">Home</a>
+        </li>
         <li class="nav__list__item mobile-nav__list__item">
           <a href="./web.html">Web</a>
         </li>
