--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -56,6 +56,7 @@
   flex-direction: column;
   text-align: right;
   place-content: flex-end;
+  place-items: flex-end;
   font-size: 18px;
   background: linear-gradient(
     to left,
@@ -78,7 +79,6 @@
 
   &__toggler {
     position: fixed;
-    display: block;
     top: 0px;
     left: 0px;
     color: grey(2);
@@ -95,13 +95,16 @@
 
   &__image {
     width: 200px;
-    margin-left: 180px;
     margin-top: 50px;
+    margin-right: 0;
+    transition: margin-right 2s cubic-bezier(0.22, 0.61, 0.36, 1);
   }
 
   &__list {
     display: flex;
     flex-direction: column;
+    margin-right: 0;
+    transition: margin-right 1s cubic-bezier(0.22, 0.61, 0.36, 1);
 
     &__item {
       padding-bottom: $spacer * 1.5;
