--- a/src/views/index.html
+++ b/src/views/index.html
@@ -25,8 +25,9 @@
     <!-- mobile nav -->
     <div class="mobile-nav__toggler"><i class="fas fa-bars mobile-nav__toggler--icon"></i></div>
     <nav class="mobile-nav">
-        <a href="./index.html"><img src="../images/tiger.png" alt="jared makes tiger logo" class="mobile-nav__image"></a>
+        <img src="../images/tiger.png" alt="jared makes tiger logo" class="mobile-nav__image">
       <ul class="nav__list mobile-nav__list">
+        <li class="nav__list__item mobile-nav__list__item"><a href="./index.html">Home</a></li>
         <li class="nav__list__item mobile-nav__list__item"><a href="./web.html">Web</a></li>
         <li class="nav__list__item mobile-nav__list__item"><a href="./voice.html">Voice</a></li>
         <li class="nav__list__item mobile-nav__list__item"><a href="./random.html">Random</a></li>
