--- a/src/views/web.html
+++ b/src/views/web.html
@@ -15,7 +15,7 @@
 
 <body>
   <nav class="nav">
-    <a href="./index.html" class="nav__logo">Jared Makes</a>
+    <a href="./index.html" class="nav__logo button--fall">Jared Makes</a>
     <ul class="nav__list">
       <li class="nav__list__item" ><a href="./web.html" class="current-page">Web</a></li>
       <li class="nav__list__item"><a href="./voice.html">Voice</a></li>
