--- a/src/views/contact.html
+++ b/src/views/contact.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="./index.html" class="nav__logo">Jared Makes</a>
+      <a href="./index.html" class="nav__logo button--fall">Jared Makes</a>
       <ul class="nav__list">
         <li class="nav__list__item"><a href="./web.html">Web</a></li>
         <li class="nav__list__item"><a href="./voice.html">Voice</a></li>
