--- a/src/views/index.html
+++ b/src/views/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <nav class="nav">
-      <a href="./index.html" class="nav__logo current-page">Jared Makes</a>
+      <a href="./index.html" class="nav__logo current-page button--fall">Jared Makes</a>
       <ul class="nav__list">
         <li class="nav__list__item"><a href="./web.html">Web</a></li>
         <li class="nav__list__item"><a href="./voice.html">Voice</a></li>
